--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "css-loader": "^0.25.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "0.9.0",
     "html-webpack-plugin": "^2.24.1",
     "ip": "^1.1.4",
-    "url-loader": "0.5.7",
-    "file-loader": "0.9.0",
-    "postcss-pxtorem": "^3.3.1",
+    "json-loader": "^0.5.4",
     "postcss-loader": "0.11.0",
+    "postcss-pxtorem": "^3.3.1",
+    "style-loader": "0.13.1",
     "stylus": "0.54.2",
     "stylus-loader": "2.1.1",
+    "url-loader": "0.5.7",
     "vue-hot-reload-api": "^1.2.0",
     "vue-html-loader": "^1.0.0",
     "vue-loader": "8.3.0",
-    "style-loader": "0.13.1",
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
@@ -44,9 +45,11 @@
     "babel-preset-es2015": "6.14.0",
     "babel-preset-stage-0": "6.5.0",
     "babel-runtime": "^6.0.0",
+    "connect-history-api-fallback": "^1.3.0",
     "fastclick": "^1.0.6",
     "koa": "^2.0.0-alpha.7",
     "koa-router": "^5.4.0",
+    "proxy-middleware": "^0.15.0",
     "vue": "^1.0.21",
     "vue-router": "^0.7.13",
     "vuex": "0.6.3",
