--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --display-modules --display-chunks --config build/webpack.prod.conf.js",
-    "dev": "node ./build/dev-server.js"
+    "dev": "nodemon ./build/dev-server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "^2.24.1",
+    "http-proxy-middleware": "^0.17.2",
     "ip": "^1.1.4",
     "json-loader": "^0.5.4",
     "postcss-loader": "0.11.0",
